@@ -1,18 +1,18 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
   <module>Plugins::Groups::Plugin</module>
-  <version>0.1.6</version>
-  <name>PLUGIN_GROUPS_NAME</name>
-  <optionsURL>plugins/Groups/settings/basic.html</optionsURL>
-  <id></id>
+  <description>PLUGIN_GROUPS_DESC</description>
+  <defaultState>enabled</defaultState>
   <targetApplication>
     <minVersion>7.7</minVersion>
     <id>SqueezeCenter</id>
     <maxVersion>*</maxVersion>
   </targetApplication>
-  <defaultState>enabled</defaultState>
-  <email>philippe_44@outlook</email>
-  <creator>philippe_44</creator>
   <type>2</type>
-  <description>PLUGIN_GROUPS_DESC</description>
+  <creator>philippe_44</creator>
+  <id></id>
+  <name>PLUGIN_GROUPS_NAME</name>
+  <version>0.1.6</version>
+  <optionsURL>plugins/Groups/settings/basic.html</optionsURL>
+  <email>philippe_44@outlook</email>
 </extensions>
